# maid

./: README.md  cabal.project  cabal.project.release  maid-build.cabal
.github/workflows/: publish.yml  test.yml
app/: Main.hs
extras/completion/: bash  fish  zsh
src/: Maid.hs
src/Maid/: Parser.hs
